# item_detail_popups

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  check.yml
src/: addon.rs  config.rs  lib.rs  thread.rs  threads.rs
src/addon/: cache.rs  config.rs  context.rs  keybind.rs  mod.rs  threads.rs
src/addon/cache/: mod.rs
src/addon/keybind/: mod.rs
src/addon/keybinds/: mod.rs
src/addon/threads/: mod.rs
src/api/: api_error.rs  gw2_api.rs  gw2_tp.rs  gw2_wiki.rs  gw2tp.rs  mod.rs
src/api/gw2/: mod.rs  response.rs  service.rs
src/api/gw2/price/: buy_price.rs  mod.rs  price_api_response.rs  sell_price.rs
src/api/gw2_api/: mod.rs
src/api/gw2_wiki/: mod.rs
src/api/gw2tp/: mod.rs
src/cache/: item_name.rs  mod.rs  popup_data.rs  price.rs  texture.rs
src/cache/item_name/: mod.rs
src/cache/popup/: mod.rs
src/cache/price/: mod.rs
src/config/: keyboard_layout.rs  mod.rs  rendering_params.rs
src/configuration/: config.rs  keyboard_layout.rs  mod.rs  notification_params.rs
src/configuration/popup/: rendering_params.rs
src/configuration/search/: mod.rs  normalize.rs  search_history.rs  search_params.rs
src/context/: cloneable_clipboard.rs  font.rs  mod.rs
src/context/ui/: mod.rs  popup.rs
src/context/ui/popup/: dimensions.rs  mod.rs  popup_data.rs  style.rs  tag_params.rs  token.rs
src/core/: addon.rs  threads.rs
src/core/utils/: key_combination.rs  serde.rs  ui.rs
src/render/: hovered_popup.rs  mod.rs  options.rs  pinned_popup.rs  popup_data.rs  search.rs  token_renderer.rs  ui.rs
src/render/options/: advanced.rs  cache.rs  general.rs  help.rs  macro.rs  mod.rs  style.rs
src/render/popup_data/: mod.rs  price.rs
src/render/token/: image.rs  list.rs  mod.rs  table.rs  tag.rs  text.rs
src/render/util/ui/: extended.rs  mod.rs
src/render/util/ui/extended/: mod.rs
src/service/: credential_manager.rs  http_client.rs  item_tag_parser.rs  keyboard.rs  mod.rs  popup.rs  search.rs
src/state/: clipboard.rs  context.rs  font.rs  keybinds.rs  mod.rs  mumble.rs  ui_context.rs
src/state/cache/: cache.rs  cached_data.rs  caching_status.rs  gw2_tp.rs  item_name.rs  mod.rs  price.rs  texture.rs
src/state/popup/: mod.rs  popup_data.rs  popup_state.rs  table_params.rs  token.rs
src/state/search/: matching_entry.rs  mod.rs  search_result.rs
src/state/threads/: cache.rs  daemon.rs  font.rs  link.rs  mod.rs  popup.rs
src/thread/: mod.rs
src/util/: key_combination.rs  mod.rs  ui_state.rs
src/util/key_combination/: mod.rs
src/utils/: time.rs
