[package]
name = "item_detail_popups"
version = "0.13.0"
authors = ["lorkanoo"]
edition = "2021"
description = "Contextual popup with item details for hovered items"
repository = "https://github.com/lorkanoo/item_detail_popups"
rust-version = "1.76.0"

[dependencies]
log = { version = "0.4.22", features = ["release_max_level_info", "max_level_debug"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.132"
windows = { version = "0.58.0", features = [
    "Win32_Media",
] }
regex = "1.11.1"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "mumble_json"] }
chrono = { version = "0.4.38", features = ["serde"] }
select = "0.6.0"
open = "5.3.1"
semver = "1.0.23"
rdev = "0.5.3"
rfd = "0.15.1"
arboard = "3.4.1"
rand = "0.8.5"
bimap = "0.6.3"
once_cell = "1.20.2"
enigo = "0.3.0"
device_query = "2.1.0"
singularize = { git = "https://github.com/lorkanoo/singularize_gw2"}
scraper = "0.22.0"
ego-tree = "0.10.0"
linked-hash-map = "0.5.6"
indexmap = {  version = "2.7.0", features = ["serde"] }
lazy_static = "1.5.0"
ureq = { version = "2.12.1", features = ["json"] }

[build-dependencies]
winresource = "0.1.17"

[lib]
crate-type = ["cdylib"]

[package.metadata.winresource]
ProductName = "item_detail_popups"
OriginalFilename = "item_detail_popups.dll"

[profile.release]
lto = "thin"
debug = "limited"
split-debuginfo = "packed"
