[package]
name = "item_detail_popups"
version = "2.2.0"
authors = ["lorkanoo"]
edition = "2021"
description = "Contextual popup with item details for hovered items"
repository = "https://github.com/lorkanoo/item_detail_popups"
rust-version = "1.76.0"

[dependencies]
log = { version = "0.4.22", features = ["release_max_level_info", "max_level_debug"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.132"
regex = "1.11.1"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "mumble_json"] }
chrono = { version = "0.4.38", features = ["serde"] }
open = "5.3.1"
once_cell = "1.20.2"
device_query = "2.1.0"
scraper = "0.22.0"
ego-tree = "0.10.0"
indexmap = { version = "2.7.0", features = ["serde"] }
lazy_static = "1.5.0"
ureq = { version = "2.12.1", features = ["json"] }
arboard = "3.5.0"
enigo = "0.3.0"
strum = "0.27.1"
strum_macros = "0.27.1"
singularize = "0.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
keyring = { version = "3.6.3", features = ["windows-native", "sync-secret-service"] }
[build-dependencies]
winresource = "0.1.17"

[lib]
crate-type = ["cdylib"]

[package.metadata.winresource]
ProductName = "item_detail_popups"
OriginalFilename = "item_detail_popups.dll"

[profile.release]
lto = "thin"
debug = "limited"
split-debuginfo = "packed"

